--- a/XPCT.WebAPI/appsettings.json
+++ b/XPCT.WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Key": "SKDJBFIQWERFVGPQUIEJBRTG934TNJKOQWBFGPIUQBWER4OT34-0RTUIWEBTFG9043"
+  }
 }
