--- a/XPCT.WebAPI/appsettings.json
+++ b/XPCT.WebAPI/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "JWT": {
     "Key": "SKDJBFIQWERFVGPQUIEJBRTG934TNJKOQWBFGPIUQBWER4OT34-0RTUIWEBTFG9043"
+  },
+  "WorkerSettings": {
+    "ProccessScheduleHourInterval": 24
   }
 }
